# codeql-solidity

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  security.yml  test.yml
docs/query-development/: 01-getting-started.md  02-core-concepts.md  03-control-flow.md  04-data-flow.md  05-call-graph.md  06-writing-security-queries.md  07-advanced-topics.md  08-reference.md
extractor/: Cargo.toml  cross.toml
extractor-pack/: codeql-extractor.yml  solidity.dbscheme
extractor-pack/tools/: autobuild.sh  codeql-extractor-solidity  index-files.sh
extractor/src/: lib.rs  main.rs
extractor/src/codegen/: mod.rs
extractor/src/extraction/: extractor.rs  mod.rs
extractor/src/schema/: mod.rs
extractor/src/trap/: compression.rs  label.rs  mod.rs  writer.rs
ql/lib/: qlpack.yml  solidity.dbscheme.stats  solidity.qll
queries/: codeql-pack.lock.yml  qlpack.yml
queries/analysis/: AssemblyAnalysis.ql  CallGraph.ql  CallGraphDetailed.ql  DataFlowAnalysis.ql  DeFiPatterns.ql  DebugModifier.ql  ERCCompliance.ql  EventPatterns.ql  ExternalCallGraph.ql  ExternalCallsAnalysis.ql  FunctionList.ql  InheritanceAnalysis.ql  ProxyPatterns.ql  ReentrancyPatterns.ql  StorageLayout.ql  TokenPatterns.ql  UnresolvedCalls.ql
queries/security/: AccessControlEscalation.ql  CrossContractReentrancy.ql  DelegatecallStorageCollision.ql  FlashLoanAttackVector.ql  InvariantTarget.ql  StateMachineViolation.ql
tests/fixtures/: ComplexControlFlow.sol  (+12 more)
(+34 files in other folders)
